Thu Aug  5 20:57:04 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        Commiting a change initially developed by Mike Martinez:

        * NEWS:
        * tools/dissector:
        * tools/dissector/README:
        * tools/dissector/colorfilters:
        * tools/dissector/dissector.mpc:
        * tools/dissector/dissector.rc:
        * tools/dissector/dissector_export.h:
        * tools/dissector/packet.cpp:
        * tools/dissector/plugin.cpp:

          Renamed Wireshark dissector 'odds' library to 'OpenDDS_Dissector'.
          The source directory was renamed from tools/odds_dissector
          to tools/dissector.

        * tools/dissector/odds_dissector.mpc:
        * tools/dissector/odds_dissector.rc:
        * tools/dissector/odds_export.h:
        * tools/dissector/odds_packet.cpp:
        * tools/dissector/odds_plugin.cpp:
        * tools/odds_dissector:

          Removed these files.

Thu Aug  5 20:13:26 UTC 2010  Yan Dai  <dai_y@ociweb.com>

        * tests/DCPS/UnitTests/DurationToTimeValue.cpp:

          Fixed test result verification on 64bits build.

Thu Aug  5 16:36:01 UTC 2010  Mike Martinez  <martinez_m@ociweb.com>

        * NEWS:
        * tools/monitor:
        * tools/monitor/Monitor.mpc:
        * tools/monitor/README:
        * tools/monitor/doc/userguide.html:

          Removed 'odds_' decorator from the command name.

        * tools/odds_monitor:

          Removed these files.

Thu Aug  5 16:16:43 UTC 2010  Mike Martinez  <martinez_m@ociweb.com>

        * NEWS:
        * java/jms/compat/build.xml:
        * tools/repoctl:
        * tools/repoctl/repoctl.cpp:
        * tools/repoctl/repoctl.mpc:

          Removed 'odds_' decorator from the command name.

        * tools/odds_repoctl:
        * tools/odds_repoctl/odds_repoctl.mpc:
        * tools/odds_repoctl/odds_repoctl.cpp:
        * tools/repoctl/odds_repoctl.mpc:
        * tools/repoctl/odds_repoctl.cpp:

          Removed these files.
